--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Christina Vafaian</title>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name=”description” content=”Hello there and welcome to my personal webpage. Need a software developer? Click on those blue words up there to learn more!”/>
   </head>
   <body>
