Modified for multi browser compatability

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,7 +25,7 @@
     <title>Christina Vafaian</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name=”description” content=”Hello there and welcome to my personal webpage. Need a software developer? Click on those blue words up there to learn more!”/>
   </head>
   <body>
