Added README, changed meta description

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -17,7 +17,7 @@
     <title>Christina Vafaian</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name=”description” content=”Hello there and welcome to my personal webpage. Need a software developer? Click on those blue words up there to learn more!”/>
+    <meta name="description" content="Hello there and welcome to my personal webpage. Need a software developer? Click on those blue words up there to learn more!">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
